--- a/index.html
+++ b/index.html
@@ -5,19 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TopCityTickets</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path fill='%236366F1' d='M2 9a3 3 0 0 1 0 6v1a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-1a3 3 0 0 1 0-6V8a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2Z'/></svg>">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              'primary': '#6366F1', // Indigo 500
-              'primary-focus': '#4F46E5', // Indigo 600
-              'secondary': '#EC4899', // Pink 500
-              'dark': '#111827', // Gray 900
-              'light': '#F3F4F6', // Gray 100
-              'gray-dark': '#1F2937', // Gray 800
-              'gray-medium': '#4B5563', // Gray 600
+    <script type="module" src="/src/index.tsx"></script>
               'gray-light': '#D1D5DB', // Gray 300
             },
             fontFamily: {
